# mcp-workshop

./: .gitignore  README.md  _config.yml  prepare.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml  docs_issue.md  feedback.md
_includes/: head-custom.html
aca/: Dockerfile  azure.yaml
aca/infra/: main.bicep  main.parameters.json  resources.bicep
aca/src/: .env.example  news_server.py  requirements.txt
ai-foundry/: agent_uses_mcp.py
ai_foundry/: .env.example  agent_uses_mcp.py
clients/: .env.example  console_client.py  entraid_client.py
func/: azure.yaml
func/infra/: main.parameters.json
func/src/: function_app.py
risks/: .env.example  rce.ipynb  rce.py  tool_poisoning.ipynb  tool_poisoning.py  tool_shadowing.ipynb  tool_shadowing.py  xpia.ipynb  xpia.py
risks/data/: confidential.txt  contoso-fs-injected.docx  contoso-fs.docx
servers/: .env.example  entraid_obo_server.py  entraid_weather_server.py  oauth_weather_server.py  simple_stock_server.py
